# sdl-game

./: CMakeLists.txt  README.md  game.cpp
include/navigation/: camera.hpp
include/particles/: particle.hpp  particle_emitter.hpp
include/sprites/: sprite.hpp  sprite_circle.hpp  sprite_rectangle.hpp
include/surfaces/: circle.hpp  image.hpp  rectangle.hpp  surface.hpp  text.hpp
include/textures/: texture.hpp  texture_circle.hpp  texture_image.hpp  texture_rectangle.hpp  texture_text.hpp
include/time/: timer.hpp
src/: game.cpp
src/navigation/: camera.cpp
src/particles/: particle.cpp  particle_emitter.cpp
src/sprites/: sprite.cpp  sprite_circle.cpp  sprite_rectangle.cpp
src/surfaces/: circle.cpp  image.cpp  rectangle.cpp  surface.cpp  text.cpp
src/textures/: texture.cpp  texture_circle.cpp  texture_image.cpp  texture_rectangle.cpp  texture_text.cpp
src/time/: timer.cpp
